[Backend] Added logging and error handling
- Logging in service, controller and mapper class logs to a centralized file
- Error handling in Service class
- Rudimentary error handling in Controller class